mtls_auth/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mstakx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mstakx
  template:
    metadata:
      labels:
        app: mstakx
    spec:
      containers:
      - name: mstakx
        image: gcr.io/kubernetes-e2e-test-images/echoserver:2.1
        ports:
        - containerPort: 8080
