mtls_auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mstakx-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: mstakx
  type: LoadBalancer
